Adding base service CRUD functionalities and preparing answer class. Adding @Repositiatory